# mc-utils

./: Cargo.toml  cli.emb  cli.txt  flake.nix  readme.md  stuff.md
.github/workflows/: release.yml  rust.yml
src/: api.rs  main.rs  util.rs
