[package]
name = "mc-utils"
version = "0.1.0"
authors = ["brecert <11599528+Brecert@users.noreply.github.com>"]
edition = "2018"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
panic = "abort"
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
owo-colors = "1.3.0"
nop-json = "2.0"
minreq = { version = "2.2.1", features = ["https"] }
chrono = "0.4.19"
base64 = "0.13.0"
sha-1 = "0.9.4"
textcode = "0.2.1"
hex = "0.4.2"
binread = "1.4.1"
craftping = "0.2.1"
css-color-parser2 = "1.0.1"
thiserror = "1.0.24"

[package.metadata.nix]
app = true
build = true
nativeBuildInputs = ["pkg-config"]
runtimeLibs = []
